--- a/bases/flux-app-v2/giantswarm/resource-refresh-vault-token.yaml
+++ b/bases/flux-app-v2/giantswarm/resource-refresh-vault-token.yaml
@@ -10,6 +10,12 @@ spec:
     spec:
       template:
         spec:
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
+            runAsGroup: 1000
+            seccompProfile:
+              type: RuntimeDefault
           initContainers:
             - args:
               - --vault-address=$(VAULT_ADDR)
@@ -25,6 +31,12 @@ spec:
               image: gsoci.azurecr.io/giantswarm/k8s-jwt-to-vault-token:0.1.0
               imagePullPolicy: Always
               name: ensure-vault-token
+              securityContext:
+                capabilities:
+                  drop:
+                    - ALL
+                allowPrivilegeEscalation: false
+                readOnlyRootFilesystem: true
           containers:
             - args:
                 - delete
@@ -33,6 +45,13 @@ spec:
                 - -lapp=kustomize-controller
               image: gsoci.azurecr.io/giantswarm/docker-kubectl:1.18.8
               name: restart-kustomize-controller
+              securityContext:
+                capabilities:
+                  drop:
+                    - ALL
+                allowPrivilegeEscalation: false
+                readOnlyRootFilesystem: true
+
           serviceAccountName: refresh-vault-token
           restartPolicy: OnFailure
 ---
