Add zot registry credentials file by default

--- a/extras/zot-cache/values.yaml
+++ b/extras/zot-cache/values.yaml
@@ -101,6 +101,8 @@ configFiles:
         },
         "extensions": {
           "sync": {
+            "enable": true,
+            "credentialsFile": "/secret/credentials",
             "registries": [
               {
                 "urls": [
