--- a/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
+++ b/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
@@ -17,7 +17,7 @@ metadata:
 spec:
   interval: 30s
   ref:
-    branch: remove-taylorbot-token
+    branch: main
   secretRef:
     name: giantswarm-clusters-ssh-credentials
   timeout: 60s
