--- a/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
+++ b/bases/flux-giantswarm-resources/resource-gitrepositories.yaml
@@ -60,3 +60,14 @@ spec:
     name: shared-configs-ssh-credentials
   timeout: 60s
   url: ssh://git@ssh.github.com:${github_port:=443}/giantswarm/shared-configs
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: releases
+  namespace: flux-giantswarm
+spec:
+  url: https://github.com/giantswarm/releases.git
+  ref:
+    branch: master
+  interval: 1m
